tests/snapshots/help__help_find.snap
---
source: tests/help.rs
expression: "help(&[\"find\", \"--help\"])"
---
Filter concepts by exact predicate (tags, type, frontmatter, text match)

Usage: okq find [OPTIONS]

Options:
      --bundle <DIR>
          Bundle directory to query [default: current directory]

      --tag <TAG>
          Require this tag (repeatable; all required — AND)

      --json
          Emit machine-readable JSON on stdout instead of human-readable text

      --type <TYPE>
          Require this `type` (repeatable; any matches — OR)

      --no-color
          Disable colored output (also honors NO_COLOR)

      --where <FIELD=VALUE>
          Require a frontmatter predicate `field=value` (repeatable; all required — AND)

      --match <PATTERN>
          Require the title or body to contain this pattern

      --no-ignore
          Ignore all .okqignore files; query the full tree, nothing excluded

      --regex
          Treat `--match` as a regular expression instead of a literal substring

      --status <STATUS>
          Require this lifecycle `status` (repeatable; any matches — OR)

      --trust <TIER>
          Require this derived trust tier (repeatable; any matches — OR)

      --stale
          Keep only concepts past their `stale_after` date

      --today <YYYY-MM-DD>
          Evaluate staleness against this ISO date instead of today (reproducible)

  -h, --help
          Print help (see a summary with '-h')

Examples:
  # Concepts carrying a tag
  okq find --tag security

  # ADRs that are accepted (predicates AND together)
  okq find --type adr --where status=accepted

  # Regex over title/body, as JSON
  okq find --match 'BM[0-9]+' --regex --json
