tests/snapshots/help__help_get.snap
---
source: tests/help.rs
expression: "help(&[\"get\", \"--help\"])"
---
Expand one concept: print its frontmatter and/or body, or a single section

Usage: okq get [OPTIONS] <CONCEPT>

Arguments:
  <CONCEPT>
          Concept to expand: a concept id (`tables/users`) or `.md` path (`tables/users.md`)

Options:
      --bundle <DIR>
          Bundle directory to query [default: current directory]

      --frontmatter
          Print only the frontmatter

      --body
          Print only the body

      --json
          Emit machine-readable JSON on stdout instead of human-readable text

      --no-color
          Disable colored output (also honors NO_COLOR)

      --section <HEADING>
          Print only the named section (matched by heading text or slug)

      --field <FIELD>
          Print only the named frontmatter field's value (matched by key name)

      --no-ignore
          Ignore all .okqignore files; query the full tree, nothing excluded

  -h, --help
          Print help (see a summary with '-h')

Examples:
  # Whole concept (frontmatter + body) — pipe to a pager or glow
  okq get adrs/0002-library-stack

  # Just one section, addressed by heading or slug
  okq get adrs/0002-library-stack --section Decision

  # Only the frontmatter, as JSON
  okq get features/get --frontmatter --json

  # Only one frontmatter field's value — script-friendly
  okq get features/get --field status
