tests/snapshots/help__help_main.snap
---
source: tests/help.rs
expression: "help(&[\"--help\"])"
---
okq is a fast, deterministic, local-first CLI for querying collections of
Markdown-with-frontmatter documents (Open Knowledge Format bundles): ADRs,
design docs, runbooks, wikis.

The same tool serves a person at a terminal and an AI agent assembling context:
every command has a --json mode and script-friendly exit codes. No embeddings,
no network, no API key — same bundle, same answer, every time.

Usage: okq [OPTIONS] <COMMAND>

Commands:
  get        Expand one concept: print its frontmatter and/or body, or a single section
  find       Filter concepts by exact predicate (tags, type, frontmatter, text match)
  search     Search: rank sections by relevance (full-text BM25, via a Tantivy index)
  neighbors  Concepts adjacent to one concept via the link graph (N-hop, typed edges)
  backlinks  Concepts that link *to* a concept (the inbound view)
  path       Shortest link path between two concepts
  orphans    Concepts with no inbound links (stale-doc candidates)
  deadlinks  Links pointing to missing/renamed concepts (inline + frontmatter)
  stats      Bundle overview: counts, distributions, link density, and hubs
  validate   Check OKF conformance: report unparseable, untyped, or malformed docs [alias: doctor]
  lint       Lint bundle hygiene: coded checks beyond conformance (orphans, drift, staleness)
  schema     Print the JSON Schema for a command's --json output (the agent contract)
  init       Scaffold a new OKF bundle (adrs/ + features/, seed docs, README)
  new        Create one concept from a template (adr | feature)
  index      Regenerate the directory-listing index.md files from the bundle's concepts
  skills     Install or list the okq-* agent skills (teach an agent to use okq)
  help       Print this message or the help of the given subcommand(s)

Options:
      --bundle <DIR>
          Bundle directory to query [default: current directory]

      --json
          Emit machine-readable JSON on stdout instead of human-readable text

      --no-color
          Disable colored output (also honors NO_COLOR)

      --no-ignore
          Ignore all .okqignore files; query the full tree, nothing excluded

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Examples:
  # Rank sections across the bundle by relevance
  okq search "retrieval latency"

  # Filter concepts by frontmatter predicate
  okq find --type adr --tag security

  # Expand one concept, or just one section of it
  okq get adrs/0006-agent-runnable-commands --section Decision

  # Everything speaks JSON, for agents and scripts
  okq search "auth" --json | jq -r '.results[].path'

Learn more:
  Design & docs:  https://github.com/mikevalstar/okq
  Run 'okq <command> --help' for details and examples on a command.
